Fixed misaligned icon

--- a/main.css
+++ b/main.css
@@ -103,7 +103,7 @@ body{
 	margin-left: 0;
 }
 .social-buttons span{
-	margin-top: -15px;
+	margin-top: -14px;
 }
 
 .social-buttons #github:hover{
